--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta property="og:title" content="Mahmud — Portfolio" />
+    <meta property="og:description" content="Curious learner. Real projects." />
+    <meta property="og:image" content="https://yourdomain.com/preview.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <title>portfolio</title>
   </head>
   <body>
